crates/monochange/tests/snapshots/release_pull_requests__multiline_releaserequest_commitmessage_body_jsonblocks_0___changelogs_1__rendered@ungrouped.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: contents
---
## core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])

### Minor

#### add feature
